--- a/style/style.css
+++ b/style/style.css
@@ -128,6 +128,7 @@ body{
 
 .btn-green:active, .btn-blue:active{
     transform: translateY(2px);
+    box-shadow: 0 2px 2px  rgba(39,39,39,.8);
 }
 
 ::-moz-focus-outer, ::-moz-focus-inner {
@@ -180,13 +181,26 @@ body{
     background: #005b8f;
 }
 /*_____________________________________slider____________________________*/
-.slider__wrapper{
+
+.slider {
+    width: 960px;
+    height: 130px;
+    overflow: hidden;
+    margin: 0 auto;
     display: flex;
     justify-content: space-between;
-    margin-top: 20px;
-    align-items: center;
-}
-.slider__img{
+    align-items: center
+  }
+  
+  .slider__container {
+    width: 900px;
+    height: 130px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center
+  }
+
+.slider__item{
     width: 100px;
     height: 80px;
     background-repeat: no-repeat;
@@ -215,27 +229,38 @@ body{
     background-image: url("../img/img7.jpg");
 }
 
-.slider__btn{
+.slider__arrow{
     cursor: pointer;
-    width: 40px;
+    width: 45px;
     height: 40px;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover; 
-
+    margin-left: 15px;
+    margin-right: 15px;
 }
-.prev-btn{
+.slider__arrow:active{
+    transform: translateY(2px);
+}
+.slider__images{
+    display: flex;
+    justify-content: space-around;
+    width: 800px;
+}
+.slider__left{
    background-image: url("../img/prew-btn.jpg"); 
 }
 
-.next-btn{
+.slider__right{
     background-image: url("../img/next-btn.png"); 
  }
+
  /*____________________________________lottery_______________________*/
  .lottery{
-     height: 350px;
-     margin-top: 40px;
-     margin-bottom: 50px;
+     height: calc(100vh - 536px);
+     min-height: 350px;
+     margin-top: 0px;
+     margin-bottom: 35px;
  }
 .lottery__field{
     display: flex;
@@ -335,6 +360,8 @@ body{
 .btn-green[disabled]{
     cursor: auto;
     background-color: #7bb379;
+    transform: translateY(2px);
+    box-shadow: 0 2px 2px  rgba(39,39,39,.8);
 }
 .green{
     background-color: #158912;
@@ -343,13 +370,15 @@ body{
 .btn-blue:disabled,
 .btn-blue[disabled]{
     cursor: auto;
-    background-color: #47a9e2;;
+    background-color: #47a9e2;
+    transform: translateY(2px);
+    box-shadow: 0 2px 2px  rgba(39,39,39,.8);
 }
 
 
  /*_____________________________________footer________________________*/
  .footer{
-    height: calc(100vh - 698px);
+    height: 150;
     min-height: 150px;
      margin-top: 20px;
      background-color: #1f1f1f;
