--- a/style/style.css
+++ b/style/style.css
@@ -316,7 +316,8 @@ body{
     width: 200px;
     height: 220px;
     margin-left: 15px;
-    border: 2px solid #dae7f4;
+    border: 2px solid grey;
+    box-shadow: 5px 5px 5px grey;
 }
 
 .lotterry__cell{
